--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,16 @@
-*{
+* {
     box-sizing: border-box;
 }
 
-body{
+body {
     margin: 0;
     padding: 0;
     font-family: Helvetica;
     height: 100vh;
     overflow: hidden;
+}
+
+.canvas {
+    margin: 1em;
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.35);
 }
