--- a/src/index.scss
+++ b/src/index.scss
@@ -3,9 +3,9 @@
 }
 
 body {
+    font-family: Helvetica, Arial;
     margin: 0;
     padding: 0;
-    font-family: Helvetica;
     height: 100vh;
     overflow: hidden;
     background: radial-gradient(circle at center, #666, #222);
@@ -14,9 +14,20 @@ body {
 #root {
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 .canvas {
     box-shadow: 0 0 1em rgba(0, 0, 0, 0.35);
+}
+
+button {
+    background: #68d;
+    color: white;
+    font-size: 1.2em;
+    padding: 0.5em 1em;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 1em;
 }
