--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,8 @@ body {
     align-items: center;
 }
 .canvas {
+    height: 500px;
+    width: 500px;
     box-shadow: 0 0 1em rgba(0, 0, 0, 0.35);
 }
 
