--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ body {
     font-family: Helvetica, Arial;
     margin: 0;
     padding: 0;
-    height: 100vh;
+    min-height: 100vh;
     overflow: hidden;
     background: radial-gradient(circle at center, #666, #222);
 }
@@ -18,6 +18,7 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 .canvas {
     height: 500px;
     width: 500px;
