--- a/example/src/app.css
+++ b/example/src/app.css
@@ -1,5 +1,6 @@
 body {
     background: #eee;
+    margin: 0;
 }
 
 * {
@@ -8,4 +9,26 @@ body {
 
 .canvas canvas {
     box-shadow: 0 0 1em 0 rgb(0, 0, 0, 0.35);
+}
+
+.layout {
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: minmax(auto, 300px) 1fr;
+    grid-template-rows: auto 1fr;
+}
+
+.navigation ul {
+    list-style: none;
+    padding: 0;
+}
+
+.header {
+    grid-column: span 2;
+}
+
+.view {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
